переделаны репозитории с JDBC на Jpa, обновлены тесты, добавлены новые команды в консоль - find-author-books, find-books-jpql и update-author